提交日期选择  wpq

--- a/fkapp/app/src/main/res/layout/activity_bts_reg.xml
+++ b/fkapp/app/src/main/res/layout/activity_bts_reg.xml
@@ -59,7 +59,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:paddingLeft="10dp"
-            android:background="@drawable/btn_username"
+            android:background="@drawable/et_normal"
             android:hint="请填写预计返校时间"
             android:layout_below="@id/Bts_tv1"
             android:textSize="16sp"/>
@@ -71,59 +71,59 @@
             android:layout_below="@id/Bts_tv2">
 
 
-        <RadioButton
-            android:id="@+id/Bts_rb2_1"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
-            android:text="飞机"
-            android:textSize="16dp"
-            />
-        <RadioButton
-            android:id="@+id/Bts_rb2_2"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
-            android:text="火车"
-            android:layout_below="@id/Bts_rb2_1"
-            android:textSize="16dp"
-            />
-        <RadioButton
-            android:id="@+id/Bts_rb2_3"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
-            android:text="长途汽车"
-            android:layout_below="@id/Bts_rb2_2"
-            android:textSize="16dp"
-            />
-        <RadioButton
-            android:id="@+id/Bts_rb2_4"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
-            android:text="自驾车"
-            android:layout_below="@id/Bts_rb2_3"
-            android:textSize="16dp"
-            />
-        <RadioButton
-            android:id="@+id/Bts_rb2_5"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
-            android:text="未定"
-            android:layout_below="@id/Bts_rb2_4"
-            android:textSize="16dp"
-            />
-        <RadioButton
-            android:id="@+id/Bts_rb2_6"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
-            android:text="其他"
-            android:layout_below="@id/Bts_rb2_5"
-            android:textSize="16dp"
-            />
+            <RadioButton
+                android:id="@+id/Bts_rb2_1"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginLeft="5dp"
+                android:text="飞机"
+                android:textSize="16dp"
+                />
+            <RadioButton
+                android:id="@+id/Bts_rb2_2"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginLeft="5dp"
+                android:text="火车"
+                android:layout_below="@id/Bts_rb2_1"
+                android:textSize="16dp"
+                />
+            <RadioButton
+                android:id="@+id/Bts_rb2_3"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginLeft="5dp"
+                android:text="长途汽车"
+                android:layout_below="@id/Bts_rb2_2"
+                android:textSize="16dp"
+                />
+            <RadioButton
+                android:id="@+id/Bts_rb2_4"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginLeft="5dp"
+                android:text="自驾车"
+                android:layout_below="@id/Bts_rb2_3"
+                android:textSize="16dp"
+                />
+            <RadioButton
+                android:id="@+id/Bts_rb2_5"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginLeft="5dp"
+                android:text="未定"
+                android:layout_below="@id/Bts_rb2_4"
+                android:textSize="16dp"
+                />
+            <RadioButton
+                android:id="@+id/Bts_rb2_6"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginLeft="5dp"
+                android:text="其他"
+                android:layout_below="@id/Bts_rb2_5"
+                android:textSize="16dp"
+                />
         </RadioGroup>
         <EditText
             android:id="@+id/Bts_et3"
@@ -132,7 +132,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:paddingLeft="10dp"
-            android:background="@drawable/btn_username"
+            android:background="@drawable/et_normal"
             android:layout_below="@id/Bts_tv3"
             android:hint="填写抵沪后的居住地"
             android:textSize="16sp"/>
@@ -142,34 +142,44 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_below="@id/Bts_tv4">
-        <RadioButton
-            android:id="@+id/Bts_rb4_1"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
-            android:text="自家"
+            <RadioButton
+                android:id="@+id/Bts_rb4_1"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginLeft="5dp"
+                android:text="自家"
 
-            android:textSize="16dp"
-            />
-        <RadioButton
-            android:id="@+id/Bts_rb4_2"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
-            android:text="亲友"
-            android:layout_below="@id/Bts_rb4_1"
-            android:textSize="16dp"
-            />
-        <RadioButton
-            android:id="@+id/Bts_rb4_3"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
-            android:text="其他"
-            android:layout_below="@id/Bts_rb4_2"
-            android:textSize="16dp"
-            />
+                android:textSize="16dp"
+                />
+            <RadioButton
+                android:id="@+id/Bts_rb4_2"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginLeft="5dp"
+                android:text="亲友"
+                android:layout_below="@id/Bts_rb4_1"
+                android:textSize="16dp"
+                />
+            <RadioButton
+                android:id="@+id/Bts_rb4_3"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginLeft="5dp"
+                android:text="其他"
+                android:layout_below="@id/Bts_rb4_2"
+                android:textSize="16dp"
+                />
         </RadioGroup>
+        <Button
+            android:id="@+id/Bts_btnsub"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/Bts_rg2"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginRight="15dp"
+            android:text="提交"
+            />
 
 
 
