--- a/fkapp/app/src/main/res/layout/activity_edit_text.xml
+++ b/fkapp/app/src/main/res/layout/activity_edit_text.xml
@@ -15,7 +15,7 @@
         android:textColor="#FFAD33"
         android:hint="学号"
         android:inputType="number"
-        android:background="@drawable/btn_username"
+        android:background="@drawable/et_normal"
         android:paddingLeft="10dp"
         android:drawablePadding="5dp"
         android:maxLines="1"
@@ -34,7 +34,7 @@
         android:inputType="textPassword"
         android:layout_below="@id/et_1"
         android:layout_marginTop="5dp"
-        android:background="@drawable/btn_username"
+        android:background="@drawable/et_normal"
         android:paddingLeft="10dp"
         android:drawablePadding="5dp"
         android:maxLines="1"
@@ -48,7 +48,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="40dp"
         android:layout_marginRight="5dp"
-        android:background="@drawable/btn_username"
+        android:background="@drawable/et_normal"
         android:text="登录"
         android:textColor="#FFFFFF"
         android:textSize="20sp" />
