--- a/fkapp/app/src/main/res/layout/activity_show_croppered.xml
+++ b/fkapp/app/src/main/res/layout/activity_show_croppered.xml
@@ -58,6 +58,7 @@
 
             <TextView
                 android:id="@+id/text"
+                android:textIsSelectable="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
