--- a/fkapp/app/src/main/res/layout/fragment_notifications.xml
+++ b/fkapp/app/src/main/res/layout/fragment_notifications.xml
@@ -46,6 +46,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:text="返校登记界面"/>
+
     <Button
         android:id="@+id/btn_LsReg"
         android:layout_width="match_parent"
@@ -53,6 +54,14 @@
         android:layout_below="@id/btn_BtsReg"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:text="返离校登记界面"/>
+        android:text="返离校登记界面" />
+    <Button
+        android:id="@+id/btn_mysql"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn_LsReg"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:text="管理员模式" />
 
 </RelativeLayout>
